# mtda

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  REUSE.toml  mtda-cli  mtda-service  mtda-systemd-helper  mtda-www  mtda.ini  pyproject.toml  setup.py  tox.ini
.github/: auto_assign.yml  spellcheck_config.yml  wordlist.txt
.github/workflows/: assign.yml  main.yml  proto.yml  spellcheck.yml
configs/: 10-www.conf  docker.ini  qemu.ini
debian/: .gitignore  changelog  control  mtda-service.mtda.service
docs/: Makefile  conf.py  config.rst  usage.rst
kas/ci/: fast.yml  full-bookworm.yml  full-noble.yml  full-trixie.yml
kas/common/: base.lock.yml  base.yml
kas/debian/: bookworm-base.yml  mtda-beaglebone-black.yml  mtda-nanopi-neo-ebg.yml  mtda-nanopi-neo.yml  mtda-qemu-amd64-ebg.yml  mtda-qemu-amd64.yml  mtda-rpi4b-ebg.yml  mtda-rpi4b-efi.yml  mtda-rpi4b.yml  trixie-base.yml
kas/opt/: ab-rootfs.lock.yml  ab-rootfs.yml  lava.yml
kas/ubuntu/: mtda-qemu-amd64.yml
meta-isar-extra/conf/: layer.conf
mtda/: __version__.py  client.py  constants.py  exceptions.py  main.py  pytest.py  utils.py
mtda/assets/: asyncio.py  pytest.py  vnc.js  www.py
mtda/assistant/: homekit.py
mtda/console/: docker.py  input.py  logger.py  output.py  qemu.py  remote.py  screen.py  serial.py  telnet.py  usbf.py
mtda/grpc/: __init__.py  mtda.proto  servicer.py
mtda/keyboard/: hid.py  qemu.py
mtda/mouse/: __init__.py  controller.py  (+1 more)
scripts/: build-using-ppa  test-using-docker
tests/: common.py  conftest.py  test_config.py  test_console.py  test_storage.py  test_target.py
(+63 files in other folders)
