# ---------------------------------------------------------------------------
# Build system configuration for MTDA
# ---------------------------------------------------------------------------
#
# This software is a part of MTDA.
# Copyright (C) 2026 Siemens AG
#
# ---------------------------------------------------------------------------
# SPDX-License-Identifier: MIT
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=40.8.0", "grpcio-tools>=1.51"]
build-backend = "setuptools.build_meta"
